FEAT : API Call, Draw a mark in the map
- 새싹 건물 기준 반경 1km 범위 녹색원으로 표시 (디자인 추후 변경)
- 좌표계 기준이 달라 카카오 지도 api를 활용하여 변환을 해주어 위도경도에 따른 mark 표시
  : 하지만, 오차가 발생하여 이를 일정 숫자를 더해주는 형식으로 수정함
- "영업","폐업" / "종로구"(임시) 필터링 적용
- 호출 건수가 한 번에 1,000건으로 제한되어 있어서 반경을 3.3km로 지정하여 필터링이 되는지 확인
- 확인 결과 상태가 "영업"을 기준으로 "종로구"에 위치한 가게만 조회됨
- (수정 필요)1,000건을 하나씩 조회하면서 결과가 한 번에 띄는 것이 아니라 개별적으로 mark가 하나씩 찍힘
- (수정 필요)호출이 1,000건씨만 가능하여 json에 들어있는 모든 자료 조회가 한번에 이루어지지 못함

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <link rel="stylesheet" href="" />
   </head>
   <body>
+    <div id="map" style="width: 100%; height: 100vh"></div>
     <script
       type="text/javascript"
-      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=발급받은APPKEY를사용하세요"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=######&libraries=services"
     ></script>
     <script src="/js/restaurant.js"></script>
-    <script src="/js/map.js"></script>
   </body>
 </html>
