--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div id="map" style="width: 100%; height: 100vh"></div>
     <script
       type="text/javascript"
-      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=######&libraries=services"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=#####&libraries=services"
     ></script>
     <script src="/js/restaurant.js"></script>
   </body>
